finalWorkspace/tests/semantic_errors/test1.cmm
main
var a,b:integer;
    c:real;
{
  a = 1.1;
}
